commit tree a9a9cbf9f36adaec65fa5dab66630dcea9b3da79

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <!-- Add an input with the type set to 'submit' -->
 <form action="#">
-  <label for="name">fullname</label>
+  <label for="fullname">fullname</label>
   <input id="fullname" type="text" name="fullname" placeholder="Enter Name" required/>
 
   <label for="email">email</label>
